--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@ layout: default
 <section id="talks" class="category">
     <h1>Talks</h1>
     <p>From Beijing to San Francisco, I've travelled the world to speak at conferences. My most recent talks deal
-        with
-        speculations about the future.</p>
+        with speculations about the future. I maintain <a href="/talks">a complete list</a>, but you can find some of
+        the highlights here:
+    </p>
     <div class="card-holder" data-category="talks">
         {% for post in site.categories.talks %}
         {% if post.featured %}
