--- a/talks.html
+++ b/talks.html
@@ -24,6 +24,69 @@ title: Talks
 
 <ul>
     <li>
+        <a href="https://campfirefestival.org"> Campfire Festival </a>
+        <br>
+        Düsseldorf, Germany<br>
+        <time>
+            August 2019
+        </time>
+        <span class="tag talk">Talk</span>
+    </li>
+</ul>
+
+<ul>
+    <li>
+        <a href="https://2019.xoxofest.com"> XOXO Fest </a>
+        <br>
+        Portland, US<br>
+        <time>
+            September 2019
+        </time>
+        <span class="tag talk">Participant</span>
+    </li>
+</ul>
+
+<ul>
+    <li>
+        <a href="https://pacscenter.stanford.edu/research/digital-civil-society-lab/"> Conference on Digital Civil Society </a>
+        <br>
+        Stanford University, US<br>
+        <time>
+            October 2019
+        </time>
+        <span class="tag talk">Participant</span>
+    </li>
+</ul>
+
+<ul>
+    <li>
+        <a href="https://decodeproject.eu/events"> DECODE Conference </a>
+        <br>
+        Turin, Italy<br>
+        <time>
+            November 2019
+        </time>
+        <span class="tag talk">Talk</span>
+    </li>
+</ul>
+
+<ul>
+    <li>
+        <a href="https://zuendfunk-netzkongress.de"> Zündfunk Netzkongress </a>
+        <br>
+        Munich, Germany<br>
+        <time>
+            November 2019
+        </time>
+        <span class="tag talk">Talk</span>
+    </li>
+</ul>
+
+
+<h3>Past:</h3>
+
+<ul>
+    <li>
         Future Affairs Conference
         <br>
         Federal Foreign Office Berlin, Germany<br>
@@ -33,8 +96,6 @@ title: Talks
         <span class="tag talk">Talk</span>
     </li>
 </ul>
-
-<h3>Past:</h3>
 
 <ul>
     <li>
