added link future affairs

--- a/talks.html
+++ b/talks.html
@@ -87,7 +87,7 @@ title: Talks
 
 <ul>
     <li>
-        Future Affairs Conference
+        <a href="https://futureaffairs19.re-publica.com/de/session/disruptive-technologies-chances-challenges"> Future Affairs Conference </a>
         <br>
         Federal Foreign Office Berlin, Germany<br>
         <time>
