Ashoka Summit added

--- a/talks.html
+++ b/talks.html
@@ -82,6 +82,19 @@ title: Talks
     </li>
 </ul>
 
+<ul>
+    <li>
+        <a href="https://www.ashoka.org/en/story/ashoka-european-changemaker-summit"> Ashoka European Changemaker Summit </a>
+        <br>
+        Barcelona, Spain<br>
+        <time>
+            November 2019
+        </time>
+        <span class="tag talk">Workshop</span>
+    </li>
+</ul>
+
+
 
 <h3>Past:</h3>
 
