--- a/talks.html
+++ b/talks.html
@@ -24,25 +24,13 @@ title: Talks
 
 <ul>
     <li>
-        <a href="https://campfirefestival.org"> Campfire Festival </a>
+        <a href="https://dinacon.ch/en/speakers/julia-kloiber/>DINAcon</a>
         <br>
-        Düsseldorf, Germany<br>
+        Switzerland, Bern<br>
         <time>
-            August 2019
+            October 2019
         </time>
-        <span class="tag talk">Talk</span>
-    </li>
-</ul>
-
-<ul>
-    <li>
-        <a href="https://2019.xoxofest.com"> XOXO Fest </a>
-        <br>
-        Portland, US<br>
-        <time>
-            September 2019
-        </time>
-        <span class="tag talk">Participant</span>
+        <span class="tag talk">Keynote</span>
     </li>
 </ul>
 
@@ -97,6 +85,18 @@ title: Talks
 
 
 <h3>Past:</h3>
+
+<ul>
+    <li>
+        <a href="https://campfirefestival.org"> Campfire Festival </a>
+        <br>
+        Düsseldorf, Germany<br>
+        <time>
+            August 2019
+        </time>
+        <span class="tag talk">Talk</span>
+    </li>
+</ul>
 
 <ul>
     <li>
