added vienna talk

--- a/talks.html
+++ b/talks.html
@@ -24,7 +24,7 @@ title: Talks
 
 <ul>
     <li>
-        <a href="https://dinacon.ch/en/speakers/julia-kloiber/>DINAcon</a>
+        <a href="https://dinacon.ch/en/speakers/julia-kloiber/">DINAcon</a>
         <br>
         Switzerland, Bern<br>
         <time>
@@ -79,6 +79,18 @@ title: Talks
             November 2019
         </time>
         <span class="tag talk">Workshop</span>
+    </li>
+</ul>
+
+<ul>
+    <li>
+        <a href="https://politikwissenschaft.univie.ac.at/"> University Vienna </a>
+        <br>
+        Vienna, Austria<br>
+        <time>
+            January 2020
+        </time>
+        <span class="tag talk">Keynote</span>
     </li>
 </ul>
 
