--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ layout: default
             href="https://www.ashoka.org/de">Ashoka Germany</a>. I’ve
         worked with international
         non-profits such
-        as the Mozilla Foundation and the Open Knowledge Foundation. I advice governments and businesses in digital
+        as the Mozilla Foundation and the Open Knowledge Foundation. I advise governments and businesses in digital
         strategies and give
         talks
         at conferences. Want to work with me or hire me as a speaker for your conference? Get in touch.
