--- a/talks.html
+++ b/talks.html
@@ -22,6 +22,58 @@ title: Talks
 
 <h3>Upcoming:</h3>
 
+
+<ul>
+    <li>
+        <a href="https://www.bundestag.de/ausschuesse/weitere_gremien/enquete_ki">Expert hearing with the Enquete-Commission of the German Bundestag</a>
+        <br>
+        Berlin, Germany<br>
+        <time>
+            March 2020
+        </time>
+        <span class="tag talk">Expert hearing</span>
+    </li>
+</ul>
+
+<ul>
+    <li>
+        <a href="https://www.bpb.de">Bundeszentrale für politische Bildung "The Future we want to live in?!"</a>
+        <br>
+        Frankfurt, Germany<br>
+        <time>
+            March 2020
+        </time>
+        <span class="tag talk">Keynote</span>
+    </li>
+</ul>
+
+<ul>
+    <li>
+        <a href="https://www.ghst.de/mitwirken-betterplace/">Demokratie wirkt digital! Hertie Stiftung und Betterplace</a>
+        <br>
+        Berlin, Germany<br>
+        <time>
+            March 2020
+        </time>
+        <span class="tag talk">Keynote</span>
+    </li>
+</ul>
+
+
+
+
+<h3>Past:</h3>
+<ul>
+    <li>
+        <a href="https://www.fsm.de/de/medien-impuls">FSM Medien Impuls</a>
+        <br>
+        Berlin, Germany<br>
+        <time>
+            December 2019
+        </time>
+        <span class="tag talk">Keynote</span>
+    </li>
+</ul>
 <ul>
     <li>
         <a href="https://dinacon.ch/en/speakers/julia-kloiber/">DINAcon</a>
@@ -93,10 +145,6 @@ title: Talks
         <span class="tag talk">Keynote</span>
     </li>
 </ul>
-
-
-
-<h3>Past:</h3>
 
 <ul>
     <li>
