--- a/index.html
+++ b/index.html
@@ -13,11 +13,29 @@ layout: default
             href="https://www.ashoka.org/de">Ashoka Germany</a>. I’ve
         worked with international
         non-profits such
-        as the Mozilla Foundation, the Open Knowledge Foundation and co-founded the <a href="https://prototypefund.de/">Prototype Fund</a> and <a href="https://codefor.de/">Code for Germany</a>. I advise governments and businesses in digital
+        as the Mozilla Foundation, the Open Knowledge Foundation and co-founded the <a
+            href="https://prototypefund.de/">Prototype Fund</a> and <a href="https://codefor.de/">Code for Germany</a>.
+        I advise governments and businesses in digital
         strategies and give
         talks
         at conferences. Want to work with me or hire me as a speaker for your conference? Get in touch.
     </p>
+
+    <p>
+        Some of the organizations I've collaborated with:
+    </p>
+
+    <div class="logos">
+        <img style="transform: scale(1.15);" title="Der Bundestag" src="/img/logos/bundestag.svg" />
+        <img style="transform: scale(1.15);" title="Bundesministerium für Bildung und Forschung"
+            src="/img/logos/bmbf_bw.svg" />
+        <img style="transform: scale(1.15);" title="Goethe Institut" src="/img/logos/goethe_institut_bw.svg" />
+        <img style="transform: scale(0.9);" title="Mozilla" src="/img/logos/mozilla.svg" />
+        <img style="transform: translateY(5%);" title="Google.org" src="/img/logos/google_org_bw.svg" />
+        <img style="transform: scale(0.9);" title="TED" src="/img/logos/ted_bw.svg" />
+        <img title="Heinrich Böll Stiftung" src="/img/logos/heinrich_böll_stiftung_bw.svg" />
+        <img title="Deutsche Bahn" src="/img/logos/db_bw.svg" />
+    </div>
 </section>
 
 <hr>
