--- a/talks.html
+++ b/talks.html
@@ -22,6 +22,49 @@ title: Talks
 
 <h3>Upcoming:</h3>
 
+<ul>
+    <li>
+        <a href="https://www.hu-berlin.de/en">Speculating about preferable futures</a>
+        <br>
+        Berlin, Germany<br>
+        <time>
+            May 2020
+        </time>
+        <span class="tag talk">Lecture</span>
+    </li>
+</ul>
+
+
+<h3>Past:</h3>
+
+
+<ul>
+    <li>
+        <a href="https://www.youtube.com/watch?v=Mnh1dnvkHSA&feature=emb_logo">Book presentation "Power to the People" by Georg Diez and Emanuel Heisenberg</a>
+        <br>
+        The Internet, Global<br>
+        <time>
+            March 2020
+        </time>
+        <span class="tag talk">Moderation</span>
+    </li>
+</ul>
+
+<ul>
+    <li>
+        <a href="https://www.innovationsbuero.net/back-to-the-future-welche-vision-fuer-die-digitalisierung-haben-wir-eigentlich/">„Back to the future“ – welche Vision für die Digitalisierung haben wir eigentlich?</a>
+        <br>
+        The Internet, Global<br>
+        <time>
+            March 2020
+        </time>
+        <span class="tag talk">Workshop</span>
+    </li>
+</ul>
+
+
+
+
 
 <ul>
     <li>
@@ -59,10 +102,6 @@ title: Talks
     </li>
 </ul>
 
-
-
-
-<h3>Past:</h3>
 <ul>
     <li>
         <a href="https://www.fsm.de/de/medien-impuls">FSM Medien Impuls</a>
