--- a/talks.html
+++ b/talks.html
@@ -24,7 +24,7 @@ title: Talks
 
 <ul>
     <li>
-        <a href="https://www.hu-berlin.de/en">Speculating about preferable futures</a>
+        <a href="https://www.hu-berlin.de/en">Speculating about preferable futures, Humbold University</a>
         <br>
         Berlin, Germany<br>
         <time>
@@ -40,7 +40,7 @@ title: Talks
 
 <ul>
     <li>
-        <a href="https://www.youtube.com/watch?v=Mnh1dnvkHSA&feature=emb_logo">Book presentation "Power to the People" by Georg Diez and Emanuel Heisenberg</a>
+        <a href="https://www.youtube.com/watch?v=Mnh1dnvkHSA&feature=emb_logo">Book presentation "Power to the People" by Georg Diez and Emanuel Heisenberg, Hanser Berlin Verlag</a>
         <br>
         The Internet, Global<br>
         <time>
@@ -52,7 +52,7 @@ title: Talks
 
 <ul>
     <li>
-        <a href="https://www.innovationsbuero.net/back-to-the-future-welche-vision-fuer-die-digitalisierung-haben-wir-eigentlich/">„Back to the future“ – welche Vision für die Digitalisierung haben wir eigentlich?</a>
+        <a href="https://www.innovationsbuero.net/back-to-the-future-welche-vision-fuer-die-digitalisierung-haben-wir-eigentlich/">„Back to the future“ – welche Vision für die Digitalisierung haben wir eigentlich?, Innovationsbüro BMFSFJ, iRightsLab</a>
         <br>
         The Internet, Global<br>
         <time>
