--- a/talks.html
+++ b/talks.html
@@ -24,6 +24,34 @@ title: Talks
 
 <ul>
     <li>
+        <a href="https://globart-academy.at/">Globart Academy 2020</a>
+        <br>
+        AKW Zwentendorf, Austria<br>
+        <time>
+          October, 2020
+        </time>
+        <span class="tag talk">Panel</span>
+    </li>
+</ul>
+
+
+<ul>
+    <li>
+        <a href="https://www.eu2020.de/eu2020-de/veranstaltungen?month=12&offset=10">High-Level-Konferenz für eine wertebasierte und nutzerzentrierte Digitalisierung</a>
+        <br>
+        Berlin, Germany<br>
+        <time>
+          December, 2020
+        </time>
+        <span class="tag talk">Panel</span>
+    </li>
+</ul>
+
+
+<h3>Past:</h3>
+
+<ul>
+    <li>
         <a href="https://www.hu-berlin.de/en">Speculating about preferable futures, Humbold University</a>
         <br>
         Berlin, Germany<br>
@@ -33,10 +61,6 @@ title: Talks
         <span class="tag talk">Lecture</span>
     </li>
 </ul>
-
-
-<h3>Past:</h3>
-
 
 <ul>
     <li>
