--- a/talks.html
+++ b/talks.html
@@ -52,6 +52,43 @@ title: Talks
 
 <ul>
     <li>
+        <a href="https://www.goethe.de">Macht im Netz – Workshop Goethe Institut</a>
+        <br>
+        Online, International<br>
+        <time>
+          June, 2020
+        </time>
+        <span class="tag talk">Workshop</span>
+    </li>
+</ul>
+
+<ul>
+    <li>
+        <a href="https://www.ghst.de/mitwirken-betterplace/">Demokratie wirkt digital! Hertie Stiftung und Betterplace</a>
+        <br>
+        Berlin, Germany<br>
+        <time>
+            June 2020
+        </time>
+        <span class="tag talk">Keynote</span>
+    </li>
+</ul>
+
+<ul>
+    <li>
+        <a href="https://20.re-publica.com/en/session/deep-dive-internet-stewardship">"Internet Stewardship" Conversation with Vint Cerf at re:publica</a>
+        <br>
+        Berlin, Germany<br>
+        <time>
+            May 2020
+        </time>
+        <span class="tag talk">Conversation</span>
+    </li>
+</ul>
+
+
+<ul>
+    <li>
         <a href="https://www.hu-berlin.de/en">Speculating about preferable futures, Humbold University</a>
         <br>
         Berlin, Germany<br>
@@ -87,9 +124,6 @@ title: Talks
 </ul>
 
 
-
-
-
 <ul>
     <li>
         <a href="https://www.bundestag.de/ausschuesse/weitere_gremien/enquete_ki">Expert hearing with the Enquete-Commission of the German Bundestag</a>
@@ -107,18 +141,6 @@ title: Talks
         <a href="https://www.bpb.de">Bundeszentrale für politische Bildung "The Future we want to live in?!"</a>
         <br>
         Frankfurt, Germany<br>
-        <time>
-            March 2020
-        </time>
-        <span class="tag talk">Keynote</span>
-    </li>
-</ul>
-
-<ul>
-    <li>
-        <a href="https://www.ghst.de/mitwirken-betterplace/">Demokratie wirkt digital! Hertie Stiftung und Betterplace</a>
-        <br>
-        Berlin, Germany<br>
         <time>
             March 2020
         </time>
