new talks added

--- a/talks.html
+++ b/talks.html
@@ -24,6 +24,31 @@ title: Talks
 
 <ul>
     <li>
+        <a href="https://www.eventbrite.de/e/shaping-the-straight-white-male-world-of-tech-tickets-111861314202">Shaping the Straight White Male World of Tech</a>
+        <br>
+        online<br>
+        <time>
+          September, 2020
+        </time>
+        <span class="tag talk">Talk</span>
+    </li>
+</ul>
+
+<ul>
+    <li>
+        <a href="https://www.disruptionlab.org/data-cities">Data Cities</a>
+        <br>
+        Berlin, Germany<br>
+        <time>
+          September, 2020
+        </time>
+        <span class="tag talk">Keynote</span>
+    </li>
+</ul>
+
+
+<ul>
+    <li>
         <a href="https://globart-academy.at/">Globart Academy 2020</a>
         <br>
         AKW Zwentendorf, Austria<br>
