--- a/talks.html
+++ b/talks.html
@@ -34,6 +34,18 @@ title: Talks
     </li>
 </ul>
 
+<ul>
+    <li>
+        <a href="https://summit.g0v.tw/2020/en/agenda/2020-12-05/5f0dd9c960d627285b6b14e7">g0v Summit 2020 "Who builds the Internet? Tales about infrastructure and the people behind it."</a>
+        <br>
+        Taipei, Taiwan and online<br>
+        <time>
+          December, 2020
+        </time>
+        <span class="tag talk">Talk</span>
+    </li>
+</ul>
+
 
 <h3>Past:</h3>
 <ul>
