--- a/talks.html
+++ b/talks.html
@@ -24,6 +24,45 @@ title: Talks
 
 <ul>
     <li>
+        <a href="https://calendar.boell.de/de/event/online-seminar-zum-infrastruktur-atlas</a>
+        <br>
+        Heinrich-Böll-Foundation, online<br>
+        <time>
+          February, 2021
+        </time>
+        <span class="tag talk">Seminar</span>
+    </li>
+</ul>
+
+<ul>
+    <li>
+        <a href="https://eveeno.com/dialogforum-organisationsentwicklung">BBE Forum – Digitalisierung & Engagement</a>
+        <br>
+        online<br>
+        <time>
+         March, 2021
+        </time>
+        <span class="tag talk">Workshop</span>
+    </li>
+</ul>
+
+
+<h3>Past:</h3>
+
+<ul>
+    <li>
+        <a href="https://www.goethe.de/de/index.html">Perpetual Beta by Goethe Institut "Boone and Bane of Digital Tech: Freedom of Information"</a>
+        <br>
+        Goethe Institut, online<br>
+        <time>
+          January, 2021
+        </time>
+        <span class="tag talk">Panel</span>
+    </li>
+</ul>
+
+<ul>
+    <li>
         <a href="https://www.eu2020.de/eu2020-de/veranstaltungen?month=12&offset=10">High-Level-Konferenz für eine wertebasierte und nutzerzentrierte Digitalisierung</a>
         <br>
         Berlin, Germany<br>
@@ -46,8 +85,6 @@ title: Talks
     </li>
 </ul>
 
-
-<h3>Past:</h3>
 <ul>
     <li>
         <a href="https://www.eventbrite.de/e/shaping-the-straight-white-male-world-of-tech-tickets-111861314202">Shaping the Straight White Male World of Tech</a>
