--- a/talks.html
+++ b/talks.html
@@ -24,7 +24,7 @@ title: Talks
 
 <ul>
     <li>
-        <a href="https://calendar.boell.de/de/event/online-seminar-zum-infrastruktur-atlas"</a>
+        <a href="https://calendar.boell.de/de/event/online-seminar-zum-infrastruktur-atlas">Online-Seminar-Reihe zum Infrastruktur-Atlas</a>
         <br>
         Heinrich-Böll-Foundation, online<br>
         <time>
