--- a/talks.html
+++ b/talks.html
@@ -24,6 +24,45 @@ title: Talks
 
 <ul>
     <li>
+        <a href="https://re-publica.com/en">Moderation of re:publica conference</a>
+        <br>
+        re:publica, online<br>
+        <time>
+          May, 2021
+        </time>
+        <span class="tag talk">Moderation</span>
+    </li>
+</ul>
+
+<ul>
+    <li>
+        <a href="https://futurium.de/">„Es war einmal, es wird einmal....“</a>
+        <br>
+        online<br>
+        <time>
+         May, 2021
+        </time>
+        <span class="tag talk">Panel</span>
+    </li>
+</ul>
+
+<ul>
+    <li>
+        <a href="https://werkleitz.de/">"New World Dis/Order"</a>
+        <br>
+        Werkleitz Festival, online<br>
+        <time>
+          June, 2021
+        </time>
+        <span class="tag talk">Keynote</span>
+    </li>
+</ul>
+
+
+<h3>Past:</h3>
+
+<ul>
+    <li>
         <a href="https://calendar.boell.de/de/event/online-seminar-zum-infrastruktur-atlas">Online-Seminar-Reihe zum Infrastruktur-Atlas</a>
         <br>
         Heinrich-Böll-Foundation, online<br>
@@ -45,9 +84,6 @@ title: Talks
         <span class="tag talk">Workshop</span>
     </li>
 </ul>
-
-
-<h3>Past:</h3>
 
 <ul>
     <li>
