--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@ layout: default
     </blockquote>
 
     <p>
-        I’m a Managing Director at <a href="http://superrr.net">Superrr Lab</a> and Partner at <a
-            href="https://www.ashoka.org/de">Ashoka Germany</a>. I’ve
-        worked with international
-        non-profits such
-        as the Mozilla Foundation, the Open Knowledge Foundation and co-founded the <a
+        I’m Co-Founder and Managing Director of <a href="http://superrr.net">Superrr Lab</a>. I’ve
+        worked with international non-profits such
+        as the Mozilla Foundation, the Open Knowledge Foundation, <a
+            href="https://www.ashoka.org/de">Ashoka</a> and co-founded the <a
             href="https://prototypefund.de/">Prototype Fund</a> and <a href="https://codefor.de/">Code for Germany</a>.
         I advise governments and businesses in digital
         strategies and give
