--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@ layout: default
     <p>
         I’m Co-Founder and Managing Director of <a href="http://superrr.net">Superrr Lab</a>. I’ve
         worked with international non-profits such
-        as the Mozilla Foundation, the Open Knowledge Foundation, <a
-            href="https://www.ashoka.org/de">Ashoka</a> and co-founded the <a
+        as the Mozilla Foundation, the Open Knowledge Foundation, Ashoka and co-founded the <a
             href="https://prototypefund.de/">Prototype Fund</a> and <a href="https://codefor.de/">Code for Germany</a>.
         I advise governments and businesses in digital
         strategies and give
