--- a/talks.html
+++ b/talks.html
@@ -24,6 +24,43 @@ title: Talks
 
 <ul>
     <li>
+        <a href="https://work.4germany.org/">Work 4 Germany – Digitaler Wandel</a>
+        <br>
+        Panel, Berlin<br>
+        <time>
+         August, 2021
+        </time>
+        <span class="tag talk">Panel</span>
+    </li>
+</ul>
+
+<ul>
+    <li>
+        <a href="https://werkleitz.de/">Netzpolitischer Abend Special mit den Kandidat*innen der Bundestagswahl</a>
+        <br>
+        Moderation, Berlin<br>
+        <time>
+          September, 2021
+        </time>
+        <span class="tag talk">Keynote</span>
+    </li>
+</ul>
+<ul>
+    <li>
+        <a href="https://www.caritas.at/">100 Jahre Caritas</a>
+        <br>
+        Keynote, Vienna<br>
+        <time>
+          October, 2021
+        </time>
+        <span class="tag talk">Moderation</span>
+    </li>
+</ul>
+
+
+<h3>Past:</h3>
+<ul>
+    <li>
         <a href="https://re-publica.com/en">Moderation of re:publica conference</a>
         <br>
         re:publica, online<br>
@@ -57,10 +94,6 @@ title: Talks
         <span class="tag talk">Keynote</span>
     </li>
 </ul>
-
-
-<h3>Past:</h3>
-
 <ul>
     <li>
         <a href="https://calendar.boell.de/de/event/online-seminar-zum-infrastruktur-atlas">Online-Seminar-Reihe zum Infrastruktur-Atlas</a>
