--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <section id="intro">
     <blockquote class="h1">
         Hi – I’m Julia.<br><br>
-        I build programs that promote technology for the common good and advocate for gender equality.
+        I build programs for just and diverse digital futures.
     </blockquote>
 
     <p>
