--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@ layout: default
 <section id="projects" class="category">
     <h1>Projects</h1>
     <p>
-        For the past 10 years I’ve been developing projects and programs that promote transparency, develop civic
-        tech, help to speculate about the future and empower women.
+        For the past 10 years I’ve been developing projects and programs that promote openness, develop civic
+        tech and help to build feminist futures.
     </p>
     <div class="card-holder" data-category="projects">
         {% for post in site.categories.projects %}
