--- a/talks.html
+++ b/talks.html
@@ -19,9 +19,12 @@ title: Talks
         font-feature-settings: 'calt'1, 'tnum'1;
     }
 </style>
-
+<!
 <h3>Upcoming:</h3>
 
+
+<h3>Past:</h3>
+-->
 <ul>
     <li>
         <a href="https://work.4germany.org/">Work 4 Germany – Digitaler Wandel</a>
@@ -36,13 +39,13 @@ title: Talks
 
 <ul>
     <li>
-        <a href="https://werkleitz.de/">Netzpolitischer Abend Special mit den Kandidat*innen der Bundestagswahl</a>
+        <a href="https://netzpolitik.org/2021/digitale-gesellschaft-109-netzpolitischer-abend-zur-bundestagswahl-2021/">Netzpolitischer Abend Special mit den Kandidat*innen der Bundestagswahl</a>
         <br>
         Moderation, Berlin<br>
         <time>
           September, 2021
         </time>
-        <span class="tag talk">Keynote</span>
+        <span class="tag talk">Moderation</span>
     </li>
 </ul>
 <ul>
@@ -53,12 +56,9 @@ title: Talks
         <time>
           October, 2021
         </time>
-        <span class="tag talk">Moderation</span>
+        <span class="tag talk">Keynote</span>
     </li>
 </ul>
-
-
-<h3>Past:</h3>
 <ul>
     <li>
         <a href="https://re-publica.com/en">Moderation of re:publica conference</a>
