--- a/talks.html
+++ b/talks.html
@@ -27,6 +27,28 @@ title: Talks
 -->
 <ul>
     <li>
+        <a href="https://www.din.de/de/din-und-seine-partner/presse/mitteilungen/artificial-intelligence-act-herausforderung-und-chance-fuer-unternehmen-847192">DIN – Artificial Intelligence Act: Herausforderung und Chance</a>
+        <br>
+        Panel, Berlin<br>
+        <time>
+         December, 2021
+        </time>
+        <span class="tag talk">Panel</span>
+    </li>
+</ul>
+<ul>
+    <li>
+        <a href="https://www.caritas.at/">100 Jahre Caritas</a>
+        <br>
+        Keynote, Vienna<br>
+        <time>
+          October, 2021
+        </time>
+        <span class="tag talk">Keynote</span>
+    </li>
+</ul>
+<ul>
+    <li>
         <a href="https://work.4germany.org/">Work 4 Germany – Digitaler Wandel</a>
         <br>
         Panel, Berlin<br>
@@ -46,17 +68,6 @@ title: Talks
           September, 2021
         </time>
         <span class="tag talk">Moderation</span>
-    </li>
-</ul>
-<ul>
-    <li>
-        <a href="https://www.caritas.at/">100 Jahre Caritas</a>
-        <br>
-        Keynote, Vienna<br>
-        <time>
-          October, 2021
-        </time>
-        <span class="tag talk">Keynote</span>
     </li>
 </ul>
 <ul>
