--- a/talks.html
+++ b/talks.html
@@ -21,10 +21,10 @@ title: Talks
 </style>
 <!--
 <h3>Upcoming:</h3>
-
-
-<h3>Past:</h3>
 -->
+
+<h3>Past talks:</h3>
+
 <ul>
     <li>
         <a href="https://www.din.de/de/din-und-seine-partner/presse/mitteilungen/artificial-intelligence-act-herausforderung-und-chance-fuer-unternehmen-847192">DIN – Artificial Intelligence Act: Herausforderung und Chance</a>
