--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ layout: default
             src="/img/logos/bmbf_bw.svg" />
         <img style="transform: scale(1.15);" title="Goethe Institut" src="/img/logos/goethe_institut_bw.svg" />
         <img style="transform: scale(0.9);" title="Mozilla" src="/img/logos/mozilla.svg" />
-        <img style="transform: translateY(5%);" title="Google.org" src="/img/logos/google_org_bw.svg" />
+        <img style="transform: translateY(5%);" title="Wikimedia" src="/img/logos/wikimedia.svg" />
         <img style="transform: scale(0.9);" title="TED" src="/img/logos/ted_bw.svg" />
         <img title="Heinrich Böll Stiftung" src="/img/logos/heinrich_boell_stiftung_bw.svg" />
         <img title="Deutsche Bahn" src="/img/logos/db_bw.svg" />
