--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ layout: default
         <img style="transform: translateY(5%);" title="Wikimedia" src="/img/logos/wikimedia.svg" />
         <img style="transform: scale(0.9);" title="TED" src="/img/logos/ted_bw.svg" />
         <img title="Heinrich Böll Stiftung" src="/img/logos/heinrich_boell_stiftung_bw.svg" />
-        <img title="Deutsche Bahn" src="/img/logos/db_bw.svg" />
+        <img title="Robert Bosch Stiftung" src="/img/logos/bosch.svg" />
     </div>
 </section>
 
