--- a/talks.html
+++ b/talks.html
@@ -19,12 +19,44 @@ title: Talks
         font-feature-settings: 'calt'1, 'tnum'1;
     }
 </style>
-<!--
+
 <h3>Upcoming:</h3>
--->
+<ul>
+    <li>
+        <a href="https://centreforfeministforeignpolicy.org/cffp-events/2022/ffpsummitsideevent-towardsafeministdigitalpolicy">Towards a Feminist Tech Policy with Alexandra Geese and Nakeema Stefflbauer</a>
+        <br>
+        online<br>
+        <time>
+         March, 2022
+        </time>
+        <span class="tag talk">Moderation</span>
+    </li>
+</ul>
+<ul>
+    <li>
+        <a href="https://digital-social-summit.de/">Digital Social Summit</a>
+        <br>
+        online<br>
+        <time>
+         March, 2022
+        </time>
+        <span class="tag talk">Workshop</span>
+    </li>
+</ul>
 
 <h3>Past talks:</h3>
 
+<ul>
+    <li>
+        <a href="https://www.youtube.com/watch?v=oQXRZVSelpc&feature=youtu.be">Tagesspiegel Data Debates: Die digitale Aufholjagd. </a>
+        <br>
+        Panel mit Volker Wissing Bundesminister für Digitales und Verkehr, Berlin<br>
+        <time>
+         March, 2022
+        </time>
+        <span class="tag talk">Panel</span>
+    </li>
+</ul>
 <ul>
     <li>
         <a href="https://www.din.de/de/din-und-seine-partner/presse/mitteilungen/artificial-intelligence-act-herausforderung-und-chance-fuer-unternehmen-847192">DIN – Artificial Intelligence Act: Herausforderung und Chance</a>
