--- a/talks.html
+++ b/talks.html
@@ -20,12 +20,114 @@ title: Talks
     }
 </style>
 
-<h3>Upcoming:</h3>
+
+<h3>Past talks:</h3>
+<ul>
+    <li>
+        <a href="">Ashoka Welcome Change with Anna-Lena von Hodenberg</a>
+        <br>
+        online<br>
+        <time>
+         June, 2022
+        </time>
+        <span class="tag talk">Moderation</span>
+    </li>
+</ul>
+<ul>
+    <li>
+        <a href="https://re-publica.com/de/session/time-break-new-boundaries-zivilgesellschaft-und-parteipolitik-digitaler-interaktion">Time to Break New Boundaries: Zivilgesellschaft und Parteipolitik in digitaler Interaktion</a>
+        <br>
+        re:publica, Berlin, Germany<br>
+        <time>
+         June, 2022
+        </time>
+        <span class="tag talk">Moderation</span>
+    </li>
+</ul>
+
+<ul>
+    <li>
+        <a href="https://www.youtube.com/watch?v=v45W_m7SOPM">re:publica 2022: Sorry for the late reply – Feminist lessons from the digital frontier</a>
+        <br>
+        re:publica, Berlin, Germany<br>
+        <time>
+         June, 2022
+        </time>
+        <span class="tag talk">Moderation</span>
+    </li>
+</ul>
+
+<ul>
+    <li>
+        <a href="">Feminist Tech Principles</a>
+        <br>
+        internal Workshop, UNHCR, online<br>
+        <time>
+         May, 2022
+        </time>
+        <span class="tag talk">Workshop</span>
+    </li>
+</ul>
+<ul>
+    <li>
+        <a href="">Feminist Tech Principles</a>
+        <br>
+        internal Workshop, UNHCR, online<br>
+        <time>
+         May, 2022
+        </time>
+        <span class="tag talk">Moderation</span>
+    </li>
+</ul>
+<ul>
+    <li>
+        <a href="https://www.helmut-schmidt.de/aktuelles/from-crisis-manager-to-agenda-setter">From Crisis Manager to Agenda Setter: The Next Generation of Leaders Weighs in on the Future of the G7</a>
+        <br>
+        Bundeskanzler Helmut Schmidt Stiftung, Hamburg, Germany<br>
+        <time>
+         May, 2022
+        </time>
+        <span class="tag talk">Mentorship</span>
+    </li>
+</ul>
+<ul>
+    <li>
+        <a href="https://www.eco.de/news/was-haben-feminismus-und-digitalisierung-gemeinsam/">"Was haben Digitalisierung und Feminismus gemeinsam?"</a>
+        <br>
+        eco Podcast, online<br>
+        <time>
+         May, 2022
+        </time>
+        <span class="tag talk">Podcast</span>
+    </li>
+</ul>
+<ul>
+    <li>
+        <a href="https://d-64.org/umfrage/footprints-april/">Female Footprints mit Lea Gimpel und Julia Kloiber</a>
+        <br>
+        D64 e. V., Berlin, Germany<br>
+        <time>
+         April, 2022
+        </time>
+        <span class="tag talk">Panel</span>
+    </li>
+</ul>
+<ul>
+    <li>
+        <a href="https://www.emaf.de/en/online-talks/?fbclid=IwAR09AcSu57oYyQsub63WmNVkVP8PzagpFlyLyIPWNB0RCL-zO2JoyH9cd1M">Smart Things at Work with Alessandro Delfanti, Jenny Kennedy, Julia Kloiber </a>
+        <br>
+        European Media Arts Festival, online<br>
+        <time>
+         April, 2022
+        </time>
+        <span class="tag talk">Panel</span>
+    </li>
+</ul>
 <ul>
     <li>
         <a href="https://centreforfeministforeignpolicy.org/cffp-events/2022/ffpsummitsideevent-towardsafeministdigitalpolicy">Towards a Feminist Tech Policy with Alexandra Geese and Nakeema Stefflbauer</a>
         <br>
-        online<br>
+        Center for Feminist Foreign Policy, <a href="https://www.youtube.com/watch?v=WaJdh7DJwVc&t=223s">watch online</a><br>
         <time>
          March, 2022
         </time>
@@ -43,9 +145,6 @@ title: Talks
         <span class="tag talk">Workshop</span>
     </li>
 </ul>
-
-<h3>Past talks:</h3>
-
 <ul>
     <li>
         <a href="https://www.youtube.com/watch?v=oQXRZVSelpc&feature=youtu.be">Tagesspiegel Data Debates: Die digitale Aufholjagd. </a>
