--- a/talks.html
+++ b/talks.html
@@ -24,6 +24,105 @@ title: Talks
 <h3>Past talks:</h3>
 <ul>
     <li>
+        <a href="https://42berlin.de/">Launch 42 Berlin</a>
+        <br>
+        Berlin, Germany<br>
+        <time>
+         December, 2022
+        </time>
+        <span class="tag talk">Moderation</span>
+    </li>
+</ul>
+<ul>
+    <li>
+        <a href="https://aspirationtech.org/events/devsummit22">Feminist Digital Policy – Nonprofit Software Development Summit</a>
+        <br>
+        Oakland, US<br>
+        <time>
+         November, 2022
+        </time>
+        <span class="tag talk">Workshop</span>
+    </li>
+</ul>
+<ul>
+    <li>
+        <a href="">Feministische Digitalpolitik – Talk Bundeszentrale für politische Bildung Bayern</a>
+        <br>
+        online<br>
+        <time>
+         November, 2022
+        </time>
+        <span class="tag talk">Talk</span>
+    </li>
+</ul>
+<ul>
+    <li>
+        <a href="https://mobilitaetspreis.de/">Germany Mobility Award</a>
+        <br>
+        Berlin, Germany<br>
+        <time>
+         October, 2022
+        </time>
+        <span class="tag talk">Selection Committee</span>
+    </li>
+</ul>
+<ul>
+    <li>
+        <a href="https://aianarchies.net/">AI Anarchies – Autumn School Feminist Tech Foresight Workshop</a>
+        <br>
+        Berlin, Germany<br>
+        <time>
+         October, 2022
+        </time>
+        <span class="tag talk">Workshop</span>
+    </li>
+</ul>
+<ul>
+    <li>
+        <a href="https://www.momentum-kongress.org/">Momentum Kongress – Transformation</a>
+        <br>
+        Hallstatt, Austria<br>
+        <time>
+         October, 2022
+        </time>
+        <span class="tag talk">Track Lead</span>
+    </li>
+</ul>
+<ul>
+    <li>
+        <a href="https://fahrplan22.bits-und-baeume.org/bitsundbaeume/talk/EFDR8Q/">Bits and Bäume Conference – Building just and sustainable digital futures</a>
+        <br>
+        Berlin, Germany<br>
+        <time>
+         October, 2022
+        </time>
+        <span class="tag talk">Panel</span>
+    </li>
+</ul>
+<ul>
+    <li>
+        <a href="https://fairsharewl.org/">Fair Share Trailblazers</a>
+        <br>
+        Berlin, Germany<br>
+        <time>
+         October, 2022
+        </time>
+        <span class="tag talk">Panel</span>
+    </li>
+</ul>
+<ul>
+    <li>
+        <a href="https://digitalfutures.space/">Digital Futures Gathering</a>
+        <br>
+        online<br>
+        <time>
+         September, 2022
+        </time>
+        <span class="tag talk">Concept, Organisation and Moderation</span>
+    </li>
+</ul>
+<ul>
+    <li>
         <a href="">Ashoka Welcome Change with Anna-Lena von Hodenberg</a>
         <br>
         online<br>
