--- a/talks.html
+++ b/talks.html
@@ -57,7 +57,7 @@ title: Talks
 </ul>
 <ul>
     <li>
-        <a href="https://mobilitaetspreis.de/">Germany Mobility Award</a>
+        <a href="https://mobilitaetspreis.de/">German Mobility Award Ceremony and Selection Process</a>
         <br>
         Berlin, Germany<br>
         <time>
