--- a/talks.html
+++ b/talks.html
@@ -24,6 +24,84 @@ title: Talks
 <h3>Past talks:</h3>
 <ul>
     <li>
+        <a href="https://citylabsommerfest2023.sched.com/">CityLab Sommerfest "Feministische Digitalpolitik: Gerechte digitale Zukünfte für uns alle"</a>
+        <br>
+        Berlin, Germany<br>
+        <time>
+         June, 2023
+        </time>
+        <span class="tag talk">Keynote</span>
+    </li>
+</ul>
+<ul>
+    <li>
+        <a href="https://conference.publicspaces.net/en">Public Spaces Conference</a>
+        <br>
+        Amsterdam, Netherlands<br>
+        <time>
+         June, 2023
+        </time>
+        <span class="tag talk">Panel</span>
+    </li>
+</ul>
+<ul>
+    <li>
+        <a href="https://www.bundestag.de/mediathek?videoid=7554708#url=L21lZGlhdGhla292ZXJsYXk/dmlkZW9pZD03NTU0NzA4&mod=mediathek">Ausschuss für Digitales des Deutschen Bundestag "Social Media-Moderatoren berichten von Arbeitsbedingungen"</a>
+        <br>
+        Berlin, Germany<br>
+        <time>
+         June, 2023
+        </time>
+        <span class="tag talk">Expertin</span>
+    </li>
+</ul>
+
+<ul>
+    <li>
+        <a href="https://www.youtube.com/watch?v=qD-qJasWkoM">re:publica "Content Moderation – Exploitation as a Service"</a>
+        <br>
+        Berlin, Germany<br>
+        <time>
+         June, 2023
+        </time>
+        <span class="tag talk">Keynote</span>
+    </li>
+</ul>
+<ul>
+    <li>
+        <a href="https://www.fh-potsdam.de/aktuelles-medien/termine/feministische-digitalpolitik-julia-kloiber">FH Potsdam – Feministische Digitalpolitik</a>
+        <br>
+        Potsdam, Germany<br>
+        <time>
+         April, 2023
+        </time>
+        <span class="tag talk">Keynote</span>
+    </li>
+</ul>
+<ul>
+    <li>
+        <a href="https://tv.orf.at/program/orf1/dok340.html">ORF Interview "Die Künstliche Intelligenz – Wer braucht noch Menschen?</a>
+        <br>
+        Linz, Austria<br>
+        <time>
+         April, 2023
+        </time>
+        <span class="tag talk">Workshop</span>
+    </li>
+</ul>
+<ul>
+    <li>
+        <a href="https://www.fh-joanneum.at/en/news/alumni-day-at-the-institute-for-design-and-communication/">Alumni Day FH Joanneum Graz – Future Perfect – How to speculate about the future and drive change</a>
+        <br>
+        Graz, Austria<br>
+        <time>
+         March, 2023
+        </time>
+        <span class="tag talk">Workshop</span>
+    </li>
+</ul>
+<ul>
+    <li>
         <a href="https://42berlin.de/">Launch 42 Berlin</a>
         <br>
         Berlin, Germany<br>
