--- a/talks.html
+++ b/talks.html
@@ -86,7 +86,7 @@ title: Talks
         <time>
          April, 2023
         </time>
-        <span class="tag talk">Workshop</span>
+        <span class="tag talk">Interview</span>
     </li>
 </ul>
 <ul>
