--- a/index.html
+++ b/index.html
@@ -9,18 +9,15 @@ layout: default
     </blockquote>
 
     <p>
-        I’m Co-Founder and Managing Director of <a href="http://superrr.net">Superrr Lab</a>. I’ve
+        I’m the Co-Founder and Managing Director of the feminist organization<a href="http://superrr.net">Superrr Lab</a>. I’ve
         worked with international non-profits such
         as the Mozilla Foundation, the Open Knowledge Foundation, Ashoka and co-founded the <a
             href="https://prototypefund.de/">Prototype Fund</a> and <a href="https://codefor.de/">Code for Germany</a>.
-        I advise governments and businesses in digital
-        strategies and give
-        talks
-        at conferences. Want to work with me or hire me as a speaker for your conference? Get in touch.
+        I advise governments and non-profits on digital strategies, write a regular column for MIT Tech Review Germany and give talks at conferences. 
     </p>
 
     <p>
-        Some of the organizations I've collaborated with:
+        Some of the organizations/governments/businesses I've collaborated with:
     </p>
 
     <div class="logos">
